Closed Bug 1303878 Opened 9 years ago Closed 9 years ago

Fix TODOs in WebGL

Categories

(Core :: Graphics: CanvasWebGL, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla52
Tracking Status
firefox50 --- fixed
firefox51 --- fixed
firefox52 --- fixed

People

(Reporter: jgilbert, Assigned: jgilbert)

References

Details

Attachments

(1 file)

No description provided.
Blocks: 1303879
Comment on attachment 8792690 [details] Bug 1303878 - Fix todos in WebGL. - https://reviewboard.mozilla.org/r/79610/#review79310 Looks good to me. Some functions are modified in Bug 1303879. This should commit with Bug 1303879 together.
Attachment #8792690 - Flags: review+
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
Comment on attachment 8792690 [details] Bug 1303878 - Fix todos in WebGL. - Approval Request Comment [Feature/regressing bug #]: webgl2 [User impact if declined]: bad webgl2 [Describe test coverage new/current, TreeHerder]: conformance suite [Risks and why]: low. This is pretty well understood. [String/UUID change made/needed]: none
Attachment #8792690 - Flags: review?(mtseng) → approval-mozilla-aurora?
Comment on attachment 8792690 [details] Bug 1303878 - Fix todos in WebGL. - WebGL2 is planned for Beta50, let's stabilize this on Aurora51 and if there are no problems I plan to include this in 50.0b4 on 10/03.
Attachment #8792690 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Blocks: 1306480
Comment on attachment 8792690 [details] Bug 1303878 - Fix todos in WebGL. - WebGL2 is planned for Fx50, Beta+
Attachment #8792690 - Flags: approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: