Bug 1303878 - Fix todos in WebGL. - r=mtseng a=ritu

MozReview-Commit-ID: D15kLfHERAI

--HG--
extra : source : 658c0c2a4b483a7b064d9d78f6820511c40f9a37