dom/canvas/WebGLRenderbuffer.h
@@ -85,7 +85,7 @@ protected:
         DeleteOnce();
     }
 
-    void DoFramebufferRenderbuffer(GLenum attachment) const;
+    void DoFramebufferRenderbuffer(FBTarget target, GLenum attachment) const;
     GLenum DoRenderbufferStorage(uint32_t samples, const webgl::FormatUsageInfo* format,
                                  uint32_t width, uint32_t height);
 };
